# proot-distro-i18n

./: .gitattributes  CLAUDE.md  README.md  SECURITY.md  compile_mo.py  pyproject.toml
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-feature-request.yml  03-question.yml
.github/workflows/: publish.yml  tests.yml
proot_distro/: arch.py  cli.py  i18n.py  locking.py  message.py  mirrors.py  names.py  parser.py  paths.py  session.py
proot_distro/commands/: backup.py  build.py  clear_cache.py  copy.py  install.py  install_local.py  kill.py  list.py  mirror.py  ps.py  push.py  remove.py  rename.py  reset.py  restore.py  run.py  sync.py
proot_distro/commands/help/: __init__.py  pages.py  pages_en.py  render.py
proot_distro/commands/login/: __init__.py  migrate.py  passwd.py  proot_cmd.py
proot_distro/completions/: _proot-distro  proot-distro.bash  proot-distro.fish
proot_distro/helpers/: download.py  rootfs.py
proot_distro/helpers/build_engine/: copy_step.py  engine.py  run_step.py
proot_distro/helpers/docker/: layers.py  pull.py  push.py  transport.py
proot_distro/locales/zh_CN/LC_MESSAGES/: proot_distro.mo  proot_distro.po
tests/: README.md
